/*************************************************************************************
 * Copyright (C) 2012-2018 E.R.P. Consultores y Asociados, C.A.                      *
 * Contributor(s): Yamel Senih ysenih@erpya.com                                      *
 * This program is free software: you can redistribute it and/or modify              *
 * it under the terms of the GNU General Public License as published by              *
 * the Free Software Foundation, either version 2 of the License, or                 *
 * (at your option) any later version.                                               *
 * This program is distributed in the hope that it will be useful,                   *
 * but WITHOUT ANY WARRANTY; without even the implied warranty of                    *
 * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the                     *
 * GNU General Public License for more details.                                      *
 * You should have received a copy of the GNU General Public License                 *
 * along with this program.  If not, see <https://www.gnu.org/licenses/>.            *
 ************************************************************************************/
syntax = "proto3";

option java_multiple_files = true;
option java_package = "org.spin.grpc.wms";
option java_outer_classname = "ADempiereWMS";
option objc_class_prefix = "HLW";

import "core_functionality.proto";
import "base_data_type.proto";
import "client.proto";

package wms;

// The Update service definition.
service WarehouseManagement {
 	//	Create OutBound Order
	rpc CreateOutBoundOrder(CreateOutBoundOrderRequest) returns (OutBoundOrder) {}
	//	Delete OutBound Order
	rpc DeleteOutBoundOrder(DeleteOutBoundOrderRequest) returns (data.Empty) {}
	//	Get a OutBound Order
	rpc GetOutBoundOrder(GetOutBoundOrderRequest) returns (OutBoundOrder) {}
	//	List OutBound Orders
	rpc ListOutBoundOrders(ListOutBoundOrdersRequest) returns (ListOutBoundOrdersResponse) {}
}

//	OutBound Order request to create
message CreateOutBoundOrderRequest {
	data.ClientRequest client_request = 1;
	string document_type_uuid = 2;
	string warehouse_uuid = 3;
	string sales_representative_uuid = 4;
}

//	OutBound Order
message OutBoundOrder {
	string uuid = 1;
	int32 id = 2;
	string document_no = 3;
	data.DocumentType document_type = 4;
	data.SalesRepresentative sales_representative = 5;
	data.DocumentStatus document_status = 6;
	string date_ordered = 7;
}

// Request for delete a outbound order
message DeleteOutBoundOrderRequest {
	data.ClientRequest client_request = 1;
	string order_uuid = 2;
}

// Request for get a outbound order
message GetOutBoundOrderRequest {
	data.ClientRequest client_request = 1;
	string order_uuid = 2;
}

// List OutBound Orders Request
message ListOutBoundOrdersRequest {
	data.ClientRequest client_request = 1;
	string warehouse_uuid = 2;
	string document_no = 3;
	string order_reference_uuid = 4;
	bool is_processed = 8;
	string pick_date_from = 11;
	string pick_date_to = 12;
	string sales_representative_uuid = 13;
	int32 page_size = 14;
	string page_token = 15;
}

//	List OutBound Orders Response
message ListOutBoundOrdersResponse {
	int64 record_count = 1;
	repeated OutBoundOrder outbound_orders = 2;
	string next_page_token = 3;
}
